<resources>
    <string name="app_name">RolAppPI</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_import">Importuj bydło z pliku CSV</string>
    <string name="fragmemt">Ustawienia</string>

    <string name="menu_home">Home</string>
    <string name="menu_cattle">Bydło</string>
    <string name="menu_cropProtection">Zabiegi ochrony roślin</string>
    <string name="menu_feed">Pasze zakupione</string>
    <string name="menu_feedProduced">Pasze wyprodukowane</string>
    <string name="menu_logout">Wyloguj</string>


    <string name="count_cattle">Ilość bydła:</string>
    <string name="count_gender_female">Ilość samice</string>
    <string name="count_gender_male">/samce:</string>
    <string name="count_caliving">Ilość zacielonych:</string>
    <string name="count_dryness">Ilość zasuszonych:</string>
    <string name="count_feed">Ilość karmiących:</string>
    <string name="stats">Statystyki</string>
    <string name="farm_id">Gospodarstwo</string>

    <string name="female_male">%1$d/%2$d</string>


    <string name="female">Samica</string>
    <string name="male">Samiec</string>
    <string name="no_calivng">Brak</string>
    <string name="dryness_after">Dni zasuszenia:</string>
    <string name="dryness_before">Dni do zasuszenia:</string>
    <string name="dryness_soon">Krowy do zasuszenia wkrótce</string>
    <string name="dryness_soon2">(id/dni)</string>
    <string name="dryness_now">Krowy zasuszone</string>
    <string name="feed_now">Krowy karmiące</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>