<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rolapppi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cattle"
        android:name="com.example.rolapppi.ui.cattle.CattleFragment"
        android:label="@string/menu_cattle"
        tools:layout="@layout/fragment_cattle">
        <action
            android:id="@+id/action_nav_cattle_to_detailsCattleFragment"
            app:destination="@id/detailsCattleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.rolapppi.ui.auth.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/detailsCattleFragment"
        android:name="com.example.rolapppi.ui.cattle.DetailsCattleFragment"
        android:label="Szczegóły zwierzęcia" />
    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.rolapppi.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_nav_feed_to_detailsFeedFragment"
            app:destination="@id/detailsFeedFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_cropProtection"
        android:name="com.example.rolapppi.ui.cropProtection.CropProtectionFragment"
        android:label="@string/menu_cropProtection"
        tools:layout="@layout/fragment_crop_protection" >
        <action
            android:id="@+id/action_nav_cropProtection_to_detailsCropProtectionFragment"
            app:destination="@id/detailsCropProtectionFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsCropProtectionFragment"
        android:name="com.example.rolapppi.ui.cropProtection.DetailsCropProtectionFragment"
        android:label="Szczegóły zabiegu" />
    <fragment
        android:id="@+id/detailsFeedFragment"
        android:name="com.example.rolapppi.ui.feed.DetailsFeedFragment"
        android:label="Szczegóły paszy"
        tools:layout="@layout/fragment_details_feed" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.rolapppi.ui.auth.SettingsFragment"
        android:label="Ustawienia"
        tools:layout="@layout/fragment_settings" />
</navigation>