<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragments.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/stats"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.011" />

        <TextView
            android:id="@+id/text_countCattle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:text="@string/count_cattle"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats"
            app:layout_constraintVertical_bias="0.064" />

        <TextView
            android:id="@+id/countCattle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_countCattle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/text_countCattle"
            app:layout_constraintTop_toTopOf="@+id/text_countCattle" />

        <TextView
            android:id="@+id/text_countGenderFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/count_gender_female"
            android:textAlignment="center"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_countCattle"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/text_countGenderMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_gender_male"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="@+id/text_countGenderFemale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_countGenderFemale"
            app:layout_constraintTop_toTopOf="@+id/text_countGenderFemale" />


        <TextView
            android:id="@+id/countGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_countGenderMale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/text_countGenderMale"
            app:layout_constraintTop_toTopOf="@+id/text_countGenderMale" />

        <TextView
            android:id="@+id/text_countCaliving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/count_caliving"
            android:textAlignment="center"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_countGenderFemale"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/countCalving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_countCaliving"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/text_countCaliving"
            app:layout_constraintTop_toTopOf="@+id/text_countCaliving" />

        <TextView
            android:id="@+id/text_countDryness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/count_dryness"
            android:textAlignment="center"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_countCaliving"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/countDryness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_countDryness"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/text_countDryness"
            app:layout_constraintTop_toTopOf="@+id/text_countDryness" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/cattlePieChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="300dp"
            app:layout_constraintTop_toBottomOf="@+id/text_countDryness"
            tools:layout_editor_absoluteX="8dp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/calvingPieChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="300dp"
            app:layout_constraintTop_toBottomOf="@+id/cattlePieChart"
            tools:layout_editor_absoluteX="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    <Button-->
    <!--        android:id="@+id/readFileBtn"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="116dp"-->
    <!--        android:text="Button"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->
</ScrollView>